--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         uses: tsgit18/sync-up-to-codecommit-action@v1
         with:
           repository_name: ${{ secrets.REPO }}
-          aws_region: ${{ secretes.REGION }}
+          aws_region: ${{ secrets.REGION }}
